# cancer-prediction-cnt25

./: .gitignore  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/cancer-prediction-cnt25/: cancer_model.md  streamlit_app.md
src/cancer_prediction_cnt25/: cancer_model.py  streamlit_app.py
src/cancer_prediction_cnt25/scripts/: app.py
tests/: test_CancerModel.py
