[project]
name = "cancer-prediction-cnt25"
description = "A basic model to predict cancerous tumors based on certain properties."
author =  [{name = "Clara Tamura"}]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "flake8>=5.0.4",
    "isort>=5.13.2",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.3",
]

[project.scripts]
cancer-prediction = "cancer_prediction_cnt25.scripts.app:cli"
train = "cancer_prediction_cnt25.scripts.app:train"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true
